[package]
name = "physics-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2.11", features = ["js"]}
rand = "0.8.5"
wasm-bindgen = "0.2.89"
serde = { version = "1.0.152", features = ["derive"] }
tsify = { version = "0.4.5", features = ["js"] }
console_error_panic_hook = "0.1.7"
